# cgrow

./: .gitignore  CMakeLists.txt  README.md  license.txt
cmake/: windeployqt.cmake
example_data/: L-PBF.json  rhys_30-HIP.cg.json  rhys_30.cg.json  rhys_45-HIP.cg.json  rhys_45.cg.json  rhys_60-HIP.cg.json  rhys_60.cg.json  synthetic_benchmark.cg.json  test2.cg.json  test4.cg.json
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/cgrow/: CMakeLists.txt  appicon.rc  decorated_spinbox.cpp  decorated_spinbox.hpp  fitting_worker.cpp  fitting_worker.hpp  icons.qrc  images.qrc  main.cpp  mainwindow.cpp  mainwindow.hpp  marker.cpp  marker.hpp  qcp_results_table.cpp  qcp_results_table.hpp  qcustomplot.h  spreadsheet.cpp  spreadsheet.hpp  test_series.cpp  test_series.hpp  test_series_dialog.cpp  test_series_dialog.hpp  tests_list_widget.cpp  tests_list_widget.hpp
src/apps/cgrow/assets/: installer_license.txt
src/lib/: CMakeLists.txt  cgrow.hpp  linalg.h  nelder_mead.hpp
src/tests/: CMakeLists.txt
src/tests/01_test/: CMakeLists.txt  main.cpp
src/tests/02_test_nelder_mead/: CMakeLists.txt  main.cpp
src/tests/03_test_pertrubed_ordinary/: CMakeLists.txt  main.cpp
src/tests/04_test_pertrubed_total/: CMakeLists.txt  main.cpp
src/tests/05_test_general_cuhyso/: CMakeLists.txt  main.cpp
src/tests/06_test_cgrow_mutliparam/: CMakeLists.txt  main.cpp
